--- a/Week-02/challenge.ipynb
+++ b/Week-02/challenge.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "Import library"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "bf9c2d2808596be0"
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "id": "initial_id",
@@ -378,7 +388,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Melakukan split dataset training dan testing sebesar 80:20 dan stratify terhadap diagnosis karena ia adalah sebuah Label"
+    "Melakukan split dataset training dan testing sebesar 80:20 dan stratify terhadap diagnosis karena ia adalah sebuah Variable Dependant"
    ],
    "metadata": {
     "collapsed": false
@@ -435,7 +445,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# K-NN"
+    "# Coba coba K-NN"
    ],
    "metadata": {
     "collapsed": false
