--- a/03 - Linear Regression/analysis-challenge.ipynb
+++ b/03 - Linear Regression/analysis-challenge.ipynb
@@ -1508,7 +1508,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "MSE mencapai 345128432.8802, ini menunjukkan prediksi model kurang tepat"
+    "R-Squared mendekati 1, dapat disimpulkan bahwa model memiliki prediksi yang cukup baik"
    ],
    "metadata": {
     "collapsed": false
