--- a/04 - Classification/challenge.ipynb
+++ b/04 - Classification/challenge.ipynb
@@ -459,6 +459,30 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## SVM with Randomized PCA"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "edf52c89459c4081"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "pca = RandomizedPCA(n_components=150, whiten=True, random_state=42)\n",
+    "svc = SVC(kernel='rbf', class_weight='balanced')\n",
+    "model = make_pipeline(pca, svc)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6a4cb020dfbf68f0"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Challenge 2"
    ],
    "metadata": {
